--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./portfolio-resources/style.css">
 </head>
 <body>
     <header class="header">
@@ -28,7 +28,7 @@
 
             </div>
 
-            <img class="banner-pro-pic" src="./images/hardy.png" alt="">
+            <img class="banner-pro-pic" src="./portfolio-resources/images/hardy.png" alt="">
 
 
          </div>
